# thesis

./: .gitignore  .gitmodules  .imgui.ini.icloud  2  ;  Cargo.toml  README.md  bench.sh  imgui.ini  pgeom  pgl  prep.py  visual.ipynb  visual.py
.ccls-cache/@@Users@pepijnvanderklei@Desktop@Thesis@Code@normal-mapping/: @Library@Developer@CommandLineTools@SDKs@MacOSX11.1.sdk@usr@include@Availability.h.blob  @Library@Developer@CommandLineTools@SDKs@MacOSX11.1.sdk@usr@include@AvailabilityInternal.h.blob  @Library@Developer@CommandLineTools@SDKs@MacOSX11.1.sdk@usr@include@AvailabilityVersions.h.blob  @Library@Developer@CommandLineTools@SDKs@MacOSX11.1.sdk@usr@include@TargetConditionals.h.blob  @Library@Developer@CommandLineTools@SDKs@MacOSX11.1.sdk@usr@include@_ctermid.h.blob  @Library@Developer@CommandLineTools@SDKs@MacOSX11.1.sdk@usr@include@_ctype.h.blob  @Library@Developer@CommandLineTools@SDKs@MacOSX11.1.sdk@usr@include@_stdio.h.blob  @Library@Developer@CommandLineTools@SDKs@MacOSX11.1.sdk@usr@include@_types.h.blob  @Library@Developer@CommandLineTools@SDKs@MacOSX11.1.sdk@usr@include@_types@_intmax_t.h.blob  (+82 more)
.ipynb_checkpoints/: visual-checkpoint.ipynb
imgui_impl_glfw/: Cargo.toml
shaders/: flat.glsl  gizmos.glsl  nm.glsl  nm_bitang.glsl  nm_cayley_motor.glsl  nm_cayley_rotor.glsl  nm_log_motor.glsl  nm_matrix.glsl  nm_motor.glsl  nm_outer_log_motor.glsl  nm_outer_log_rotor.glsl  nm_pga.glsl  nm_qtang.glsl  nm_rotor.glsl  nm_tex.glsl  tex.glsl  ui.glsl
src/: app.rs  imgui_widgets.rs  lib.rs  lights.rs  material.rs  shaders.rs  time.rs  utils.rs  vertices.rs
(+36 files in other folders)
